# wyzyrdry-c

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: enum.h  lib.h  ringbuf.h  slice.h  str.h  vec.h  wyzyrdry.h
include/wyzyrdry/: ringbuf.h  str.h  vec.h
src/: lib.c  ringbuf.c  slice.c  str.c  vec.c  wyzyrdry.c
tests/: enum.c  main.c  ringbuf.c  slice.c  str.c  vec.c
